--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "chem-bot",
+  "name": "chembotv13",
   "version": "1.0.0",
-  "description": "Chem Bot is a bot which gives you information on basic concepts of Chemistry and also has some Moderation commands to keep the server under control. It also has Fun commands which will entertain people.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ashutosh Swamys",
+  "author": "Ashutosh Swamy",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.26.1",
     "discord-jokes": "^4.0.0",
     "discord.js": "^13.6.0",
     "fs": "^0.0.1-security",
-    "ultrax": "^1.9.5",
-    "weky": "^3.1.8"
+    "ms": "^2.1.3",
+    "ultrax": "^2.0.1"
   }
 }
