--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chembotv13",
+  "name": "chembotv14",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,11 +9,12 @@
   "author": "Ashutosh Swamy",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.26.1",
-    "discord-jokes": "^4.0.0",
-    "discord.js": "^13.6.0",
+    "@discordjs/rest": "^1.7.1",
+    "axios": "^1.5.0",
+    "discord-jokes": "^4.0.7",
+    "discord.js": "^14.11.0",
     "fs": "^0.0.1-security",
     "ms": "^2.1.3",
-    "ultrax": "^2.0.1"
+    "path": "^0.12.7"
   }
 }
